--- a/assets/css/ie9.css
+++ b/assets/css/ie9.css
@@ -1,89 +1,35 @@
 /*
-	Solid State by HTML5 UP
-	html5up.net | @n33co
+	Dimension by HTML5 UP
+	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Basic */
+/* BG */
 
-	body {
-		background-color: #2e3141;
-		background-image: url("../../images/bg.jpg");
-		background-size: cover;
-		background-attachment: fixed;
-		background-position: center;
+	#bg:before {
+		background: rgba(19, 21, 25, 0.5);
 	}
 
-		body:before {
-			background: rgba(46, 49, 65, 0.8);
-			content: '';
-			display: block;
-			height: 100%;
-			left: 0;
-			position: fixed;
-			top: 0;
-			width: 100%;
-		}
+/* Header */
 
-		body > * {
-			position: relative;
-			z-index: 1;
-		}
+	#header .logo {
+		margin: 0 auto;
+	}
 
-/* Features */
-
-	.features article {
+	#header .content {
 		display: inline-block;
-		width: 45%;
 	}
 
-/* Menu */
-
-	#menu .inner {
-		margin: 4em auto;
-	}
-
-/* Wrapper */
-
-	#wrapper > header {
-		background: none !important;
-	}
-
-	.wrapper.spotlight .inner {
-		text-align: left !important;
-	}
-
-	.wrapper.spotlight .image {
+	#header nav ul {
 		display: inline-block;
-		margin: 0 3em 2em 0 !important;
-		vertical-align: middle;
-		width: 24%;
 	}
 
-	.wrapper.spotlight .content {
-		display: inline-block;
-		vertical-align: middle;
-		width: 70%;
-	}
-
-/* Banner */
-
-	#banner {
-		background: none !important;
-	}
-
-/* Footer */
-
-	#footer {
-		background: none !important;
-	}
-
-		#footer .inner form {
+		#header nav ul li {
 			display: inline-block;
-			width: 45%;
 		}
 
-		#footer .inner .contact {
-			display: inline-block;
-			width: 45%;
-		}
+/* Main */
+
+	#main article {
+		margin: 0 auto;
+	}
