--- a/assets/sass/base/_page.scss
+++ b/assets/sass/base/_page.scss
@@ -1,6 +1,6 @@
 ///
-/// Solid State by HTML5 UP
-/// html5up.net | @n33co
+/// Dimension by HTML5 UP
+/// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
 
@@ -11,11 +11,6 @@
 			width: device-width;
 		}
 
-	// MSIE: Prevents scrollbar from overlapping content.
-		body {
-			-ms-overflow-style: scrollbar;
-		}
-
 	// Ensures page width is always >=320px.
 		@include breakpoint(xsmall) {
 			html, body {
@@ -24,26 +19,16 @@
 		}
 
 	body {
-		background-color:		_palette(bg);
-
-		background-image:		linear-gradient(to top, transparentize(_palette(bg), 0.2), transparentize(_palette(bg), 0.2)),
-								url('../../images/bg.jpg');
-
-		background-size:		auto,
-								cover;
-
-		background-attachment:	fixed,
-								fixed;
-
-		background-position:	center,
-								center;
+		background: _palette(bg);
 
 		// Prevents animation/transition "flicker" on page load.
 		// Automatically added/removed by js/main.js.
-			&.is-loading {
+			&.is-loading,
+			&.is-switching {
 				*, *:before, *:after {
 					@include vendor('animation', 'none !important');
 					@include vendor('transition', 'none !important');
+					@include vendor('transition-delay', 'none !important');
 				}
 			}
 
