--- a/assets/sass/components/_list.scss
+++ b/assets/sass/components/_list.scss
@@ -1,6 +1,6 @@
 ///
-/// Solid State by HTML5 UP
-/// html5up.net | @n33co
+/// Dimension by HTML5 UP
+/// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
 
@@ -30,7 +30,7 @@
 			padding-left: 0;
 
 			li {
-				border-top: solid 1px _palette(border);
+				border-top: solid _size(border-width) _palette(border);
 				padding: 0.5em 0;
 
 				&:first-child {
@@ -47,15 +47,27 @@
 
 			li {
 				display: inline-block;
-				padding: 0 1em 0 0;
+				padding: 0 0.75em 0 0;
 
 				&:last-child {
 					padding-right: 0;
 				}
 
-				.icon {
-					&:before {
-						font-size: 1.25em;
+				a {
+					border-radius: 100%;
+					box-shadow: inset 0 0 0 _size(border-width) _palette(border);
+					display: inline-block;
+					height: 2.25rem;
+					line-height: 2.25rem;
+					text-align: center;
+					width: 2.25rem;
+
+					&:hover {
+						background-color: _palette(border-bg);
+					}
+
+					&:active {
+						background-color: _palette(border-bg-alt);
 					}
 				}
 			}
@@ -149,6 +161,12 @@
 					> * {
 						width: 100%;
 						margin: 0 !important;
+
+						&.icon {
+							&:before {
+								margin-left: -2em;
+							}
+						}
 					}
 				}
 
@@ -160,42 +178,6 @@
 							padding-top: 0;
 						}
 					}
-				}
-			}
-		}
-
-		&.contact {
-			list-style: none;
-			padding: 0;
-
-			li {
-				@include icon;
-				margin: (_size(element-margin) * 1.25) 0 0 0;
-				padding: 0 0 0 3.25em;
-				position: relative;
-
-				&:before {
-					border-radius: 100%;
-					border: solid 2px _palette(border);
-					display: inline-block;
-					font-size: 0.8em;
-					height: 2.5em;
-					left: 0;
-					line-height: 2.35em;
-					position: absolute;
-					text-align: center;
-					top: 0;
-					width: 2.5em;
-				}
-
-				&:first-child {
-					margin-top: 0;
-				}
-			}
-
-			@include breakpoint(small) {
-				li {
-					margin: (_size(element-margin) * 0.75) 0 0 0;
 				}
 			}
 		}
