--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,32 +3,26 @@
 @import 'libs/mixins';
 @import 'libs/skel';
 @import 'font-awesome.min.css';
-@import url('https://fonts.googleapis.com/css?family=Raleway:200,700|Source+Sans+Pro:300,600,300italic,600italic');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600');
 
 /*
-	Solid State by HTML5 UP
-	html5up.net | @n33co
+	Dimension by HTML5 UP
+	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
 	@include skel-breakpoints((
-		xlarge: '(max-width: 1680px)',
-		large: '(max-width: 1280px)',
-		medium: '(max-width: 980px)',
-		small: '(max-width: 736px)',
-		xsmall: '(max-width: 640px)',
-		xxsmall: '(max-width: 360px)'
+		xlarge:		'(max-width: 1680px)',
+		large:		'(max-width: 1280px)',
+		medium:		'(max-width: 980px)',
+		small:		'(max-width: 736px)',
+		xsmall:		'(max-width: 480px)',
+		xxsmall:	'(max-width: 360px)'
 	));
 
 	@include skel-layout((
 		reset: 'full',
-		boxModel: 'border',
-		grid: ( gutters: 1.75em ),
-		breakpoints: (
-			small: (
-				grid: ( gutters: 1.25em )
-			)
-		)
+		boxModel: 'border'
 	));
 
 // Base.
@@ -38,7 +32,6 @@
 
 // Component.
 
-	@import 'components/section';
 	@import 'components/form';
 	@import 'components/box';
 	@import 'components/icon';
@@ -46,12 +39,11 @@
 	@import 'components/list';
 	@import 'components/table';
 	@import 'components/button';
-	@import 'components/features';
 
 // Layout.
 
-	@import 'layout/header';
-	@import 'layout/menu';
-	@import 'layout/banner';
+	@import 'layout/bg';
 	@import 'layout/wrapper';
+	@import 'layout/header';
+	@import 'layout/main';
 	@import 'layout/footer';
